--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesAccordionChild.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesAccordionChild.mxml
@@ -200,6 +200,12 @@
 				if (!templatesList)
 					return;
 				
+				var index : int = templates.getItemIndex(template);
+				
+				if (index < 0)
+					return;
+				
+				templatesList.scrollToIndex(index);				
 				templatesList.selectedItem = template;
 			}
 			
