git-svn-id: http://svn.vdombox.ru/flextools/trunk@8325 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesGroup.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesGroup.mxml
@@ -404,13 +404,8 @@
 			
 			protected function templatesAccordion_changeHandler(event:IndexChangedEvent):void
 			{
-				for each (var folder : TemplatesAccordionChild in templatesAccordion.getChildren())
-				{
-					if (folder == selectedFolder)
-						continue;
-					
-					folder.selectedTemplate = null;
-				}
+				if (selectedTemplate)
+					selectedTemplateChanged(null);
 			}
 			
 			public function saveTemplates () : void
@@ -563,6 +558,8 @@
 				
 				dispatchEvent(renameEvent);
 			}
+			
+			
 		]]>
 	</mx:Script>
 	
