--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesAccordionChild.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplatesAccordionChild.mxml
@@ -203,7 +203,10 @@
 				var index : int = templates.getItemIndex(template);
 				
 				if (index < 0)
+				{
+					templatesList.selectedItem = null;
 					return;
+				}
 				
 				templatesList.scrollToIndex(index);				
 				templatesList.selectedItem = template;
