git-svn-id: http://svn.vdombox.ru/flextools/trunk@8328 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/ObjectTreePanelItemRenderer.mxml
@@ -133,7 +133,7 @@
 			
 			private function renameContextMenuHandler( event : Event ) : void
 			{
-				var renameWindow : NameObjectWindow = new NameObjectWindow( treeListData.label );	
+				var renameWindow : NameObjectWindow = new NameObjectWindow( treeListData.label, resourceManager.getString( "DataBase_General", "renaem_table_window_title" ) );	
 				renameWindow.addEventListener( PopUpWindowEvent.APPLY, applyHandler );
 				renameWindow.addEventListener( PopUpWindowEvent.CANCEL, cancelHandler );
 				
