git-svn-id: http://svn.vdombox.ru/flextools/trunk@8339 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
@@ -53,7 +53,8 @@
 			public function get vdomObjectAttributesVO() : VdomObjectAttributesVO
 			{
 				var vdomObjectAttributesVO : VdomObjectAttributesVO = new VdomObjectAttributesVO(_item.vdomObjectVO);
-				var attributeVO : AttributeVO = new AttributeVO( "value" );
+				
+				var attributeVO : AttributeVO = new AttributeVO( "value", "%тамnfb%3#" );
 				
 				attributeVO.value = activeEditor.getContent();
 				vdomObjectAttributesVO.attributes = [attributeVO];
