color picker - add empty value,
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8345 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
@@ -35,7 +35,6 @@
 				addEventListener( MouseEvent.CLICK, mouseClickandler );
 				
 				addEventListener( ColorPickerEvent.APPLY, applyHandler );
-//				addEventListener( "cancel", colorCompleteHandler );
 			}
 			
 			[Bindable( event="valueCommit" )]
@@ -58,7 +57,7 @@
 			
 			public function mouseClickandler( event : MouseEvent ) : void
 			{
-				ColorPickerWindow.show_window( this, _colorInNumber, true );
+				ColorPickerWindow.show_window( this, _color, true );
 			}
 			
 			private function change(event:ColorPickerEvent):void 
