Delete sort in attribute
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8352 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
@@ -106,9 +106,9 @@
 				
 				var dataProvider : ArrayCollection =  new ArrayCollection( attributesArray );
 				
-				dataProvider.sort = new Sort();
+				/*dataProvider.sort = new Sort();
 				dataProvider.sort.fields = [ new SortField( "group" ), new SortField( "displayName" ) ];
-				dataProvider.refresh();
+				dataProvider.refresh();*/
 				
 				if ( !oneObject )
 				{
