git-svn-id: http://svn.vdombox.ru/flextools/trunk@8365 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -74,7 +74,11 @@
 					_libraries = new ArrayCollection( value );
 					
 					_libraries.sort = new Sort();
-					_libraries.sort.fields = [ new SortField( "name" ) ];
+					
+					var sortField : SortField = new SortField( "name" );
+					sortField.caseInsensitive = true;
+					
+					_libraries.sort.fields = [ sortField ];
 					_libraries.refresh();
 
 					if ( newSelectedIndex != -1 )
